<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TitleMainActivityTextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleMainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.29"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="left|center_vertical"
                android:minHeight="48dp"
                android:minLines="0"
                android:singleLine="false"
                android:text="@string/SettingsButtonName" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </FrameLayout>

            <Button
                android:id="@+id/gpsButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:scrollHorizontally="true"
                android:text="@string/GPSButtonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_speed"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/currentSpeedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/default_speed"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_distance"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/currentDistanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/default_distance"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playButton"
        android:layout_alignBottom="@+id/playButton"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@+id/playButton"
        android:gravity="left|center"
        android:text="@string/pause_button" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="22dp"
        android:gravity="left|center"
        android:text="@string/play_button" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/pauseButton"
        android:gravity="left|center"
        android:text="@string/stop_button" />

</RelativeLayout>