<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/large_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/frequencyDataUpdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:text="@string/small_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ExpandableListView
        android:id="@+id/frequencyDataUpdateExpandableListView"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

    </ExpandableListView>

    <TextView
        android:id="@+id/frequencyGraphUpdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:text="@string/small_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ExpandableListView
        android:id="@+id/frequencyChartUpdateExpandableListView"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

    </ExpandableListView>

    <TextView
        android:id="@+id/defaultSpeedMeasureTextView"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:text="@string/small_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ExpandableListView
        android:id="@+id/defaultSpeedMeasureExpandableListView"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

    </ExpandableListView>

    <TextView
        android:id="@+id/defaultDistanceMeasureTextView"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:text="@string/small_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ExpandableListView
        android:id="@+id/defaultDistanceMeasureExpandableListView"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

    </ExpandableListView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_button" />

</LinearLayout>